fix overflow

--- a/src/app/lista-giochi/lista-giochi.component.scss
+++ b/src/app/lista-giochi/lista-giochi.component.scss
@@ -1,13 +1,11 @@
-.cards-container {
-    position: absolute;
-    top: 0;
-    left: 0;
+.game-cards-container {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: center;
-    overflow: hidden;
+    overflow: hidden auto;
 
     h1 {
         width: 100%;
@@ -20,22 +18,22 @@
         padding: 0 40px;
     }
 
-    .cards {
-        padding: 40px;
+    .game-cards {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 40px;
         overflow: hidden;
+        padding: 40px;
+        gap: 40px;
     
-        .card {
-            $sizeCol: 220px;
-            width: $sizeCol;
-            height: $sizeCol;
+        .game-card {
+            $cardSize: 220px;
+            width: $cardSize;
+            height: $cardSize;
             border-radius: 10px;
             background-color: whitesmoke;
             background-position: 50% 50%;
-            background-size: $sizeCol $sizeCol;
+            background-size: 100% 100%;
             box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.25);
             transition: .2s;
     
@@ -44,7 +42,7 @@
                 cursor: pointer;
             }
         }
-        .card.hover {
+        .game-card.hover {
             transform: scale(1.1);
             cursor: pointer;
         }
