--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,15 +10,12 @@ body {
 }
 
 .body {
-    // position: absolute;
-    // top: 0;
-    // left: 0;
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden auto;
+    overflow: hidden;
 }
 
 .opacity0 {
